--- a/list-locations-v1/Cargo.toml
+++ b/list-locations-v1/Cargo.toml
@@ -20,4 +20,7 @@ lambda_runtime = "0.8.3"
 tokio = { version = "1", features = ["macros"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
+serde = { version = "1.0.193", features = ["derive"] }
+uuid = { version = "1.6.1", features = ["v4"] }
+serde_json = "1.0.108"
 
