--- a/list-locations-v1/Cargo.toml
+++ b/list-locations-v1/Cargo.toml
@@ -17,10 +17,13 @@ edition = "2021"
 [dependencies]
 lambda_http = "0.8.3"
 lambda_runtime = "0.8.3"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["macros", "full"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json"] }
 serde = { version = "1.0.193", features = ["derive"] }
 uuid = { version = "1.6.1", features = ["v4"] }
 serde_json = "1.0.108"
+aws-config = "1.0.3"
+aws-sdk-dynamodb = "1.4.0"
+async-trait = "0.1.74"
 
